Fix margin covering video timeline

--- a/source/assets/stylus/_video.styl
+++ b/source/assets/stylus/_video.styl
@@ -204,6 +204,7 @@
 .px-video
 	position absolute
 	top 0
+	margin-top 0
 	left 0
 	width 100%
 	height 100%
